--- a/__dev/less/sections/_also.less
+++ b/__dev/less/sections/_also.less
@@ -1,9 +1,13 @@
 .also {
-    .row {
+    #page-content {
         margin-bottom: 2em;
         margin-top: 2em;
         padding-bottom: 1em;
         padding-top: 2em;
+    }
+
+    #highlighted-products {
+        margin-top: 2em;
     }
 
     .product {
