--- a/__dev/less/sections/_also.less
+++ b/__dev/less/sections/_also.less
@@ -1,5 +1,5 @@
 .also {
-    #page-content {
+    .product-added {
         margin-bottom: 2em;
         margin-top: 2em;
         padding-bottom: 1em;
