--- a/css/styles.css
+++ b/css/styles.css
@@ -7133,11 +7133,14 @@ button.voucher-active {
   padding: 30px 0 0 0;
   box-sizing: border-box;
 }
-.also .row {
+.also .product-added {
   margin-bottom: 2em;
   margin-top: 2em;
   padding-bottom: 1em;
   padding-top: 2em;
+}
+.also #highlighted-products {
+  margin-top: 2em;
 }
 .also .product {
   font-size: 1.5em;
