Added free shipping

--- a/__dev/less/sections/_also.less
+++ b/__dev/less/sections/_also.less
@@ -23,3 +23,11 @@
         font-size: 2em;
     }
 }
+
+.free-shipping {
+    background: #eeeeee;
+    font-size: 2em;
+    padding-bottom: 1em;
+    padding-top: 1em;
+    text-align: center;
+}
