--- a/__dev/less/sections/_product-list.less
+++ b/__dev/less/sections/_product-list.less
@@ -106,7 +106,7 @@
         .transition(all 200ms ease;);
 
         &:hover {
-            box-shadow: 0 4px 10px rgba(0, 0, 0, .2);
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
 
             .sizes {
                 opacity: 1;
