--- a/__dev/less/sections/_navigation.less
+++ b/__dev/less/sections/_navigation.less
@@ -5,7 +5,6 @@
     top: 0;
     width: 100%;
     transition: all .2s ease-in-out;
-    -webkit-transition: all .2s ease-in-out;
 }
 
 .takeover-close {
@@ -34,6 +33,7 @@
         font-size: 20px;
         height: 100%;
         left: -95%;
+        overflow-scrolling: touch;
         overflow-y: scroll;
         padding-bottom: 50px;
         position: fixed;
@@ -41,7 +41,6 @@
         top: 0;
         transition: all 0.5s;
         z-index: 1001;
-        -webkit-overflow-scrolling: touch;
     }
 
     @media (min-width: @screen-md) {
@@ -172,7 +171,7 @@ body.toggled-sitenav {
         box-shadow: 0 0 100px 50px rgba(0, 0, 0, .4);
         //transform: translate3d(0, 0, 0);
         left: 0;
-        -webkit-overflow-scrolling: touch;
+        overflow-scrolling: touch;
 
         li._active {
             a {
