--- a/__dev/less/sections/_persuasion.less
+++ b/__dev/less/sections/_persuasion.less
@@ -1,10 +1,10 @@
 #persuasion {
+    background: rgba(255, 255, 255, 0.5);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    border-top: 1px solid rgba(0, 0, 0, 0.1);
+    font-weight: 300;
     padding-bottom: 30px;
     padding-top: 30px;
-    border-top: 1px solid rgba(0, 0, 0, .1);
-    border-bottom: 1px solid rgba(0, 0, 0, .1);
-    background: rgba(255, 255, 255, .5);
-    font-weight: 300;
 }
 
 .persuasion-box {
